--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -1,41 +1,15 @@
 account-menu
 div(ng-if="!vm.showProject")
 	#account(layout="row")
-		account-info(
-			username="vm.username"
-			first-name="vm.firstName"
-			last-name="vm.lastName"
-			email="vm.email"
-			on-show-item="vm.showItem(item)"
-		)
+		account-info(username="vm.username", first-name="vm.firstName", last-name="vm.lastName", email="vm.email", item-to-show="vm.itemToShow")
+
 		#accountItem(ng-switch="vm.itemToShow")
-			account-projects(
-				ng-switch-when="repos"
-				account="vm.account"
-				accounts="vm.accounts"
-				show-page="vm.showPage(page, callingPage)"
-			)
-			account-profile(
-				ng-switch-when="profile"
-				username="vm.username"
-				first-name="vm.firstName"
-				last-name="vm.lastName"
-				email="vm.email"
-			)
-			account-billing(
-				ng-switch-when="billing"
-				show-page="vm.showPage(page, callingPage)"
-			)
-			account-upgrade(
-				ng-switch-when="upgrade"
-				calling-page="vm.callingPage"
-				show-page="vm.showPage(page, callingPage)"
-			)
-			account-collaborators(
-				ng-switch-when="collaborators"
-				calling-page="vm.callingPage"
-				show-page="vm.showPage(page, callingPage)"
-			)
+			account-projects(ng-switch-when="repos", account="vm.account", accounts="vm.accounts", show-page="vm.showPage(page, callingPage)")
+			account-profile(ng-switch-when="profile", username="vm.username", first-name="vm.firstName", last-name="vm.lastName", email="vm.email")
+			account-billing(ng-switch-when="billing", show-page="vm.showPage(page, callingPage)")
+			account-upgrade(ng-switch-when="upgrade", show-page="vm.showPage(page, callingPage)")
+			account-collaborators(ng-switch-when="collaborators", show-page="vm.showPage(page, callingPage)")
+			account-team(ng-switch-when="team", show-page="vm.showPage(page, callingPage)")
 
 div(ng-if="vm.showProject")
 	project(account="vm.state.account" project="vm.state.project" branch="vm.state.branch" revision="vm.state.revision" state="vm.state")
