--- a/frontend/login/jade/login.jade
+++ b/frontend/login/jade/login.jade
@@ -1,5 +1,5 @@
 .homeUserContent(layout="row", layout-align="center", flex)
-	md-content.md-whiteframe-1dp(aria-label="Registered")
+	md-content.md-whiteframe-1dp(aria-label="Registered", flex-lg="25", flex-gt-lg="15")
 		md-toolbar
 			.md-toolbar-tools
 				h2 Log in
