--- a/frontend/pricing/jade/pricing.jade
+++ b/frontend/pricing/jade/pricing.jade
@@ -1,6 +1,6 @@
 .homeUserContent(layout="row", layout-align="center")
 	// Basic
-	md-content.md-whiteframe-1dp(aria-label="Basic", flex="15")
+	md-content.md-whiteframe-1dp(aria-label="Basic", flex-lg="20", flex-gt-lg="15")
 		md-toolbar
 			.md-toolbar-tools(layout="row", layout-align="center center")
 				h2 Basic
@@ -18,7 +18,7 @@
 				md-button.md-raised.md-accent(ng-click="vm.showPage('signUp')") Sign Up
 
 	// Advanced
-	md-content.md-whiteframe-8dp(aria-label="Advanced", flex="15")
+	md-content.md-whiteframe-8dp(aria-label="Advanced", flex-lg="20", flex-gt-lg="15")
 		md-toolbar
 			.md-toolbar-tools(layout="row", layout-align="center center")
 				h2#pricingMiddlePanelTitle Advanced
@@ -40,7 +40,7 @@
 				md-button.md-raised.md-accent(ng-click="vm.showPage('signUp', true)") Sign Up
 
 	// Enterprise
-	md-content.md-whiteframe-1dp(aria-label="Enterprise", flex="15")
+	md-content.md-whiteframe-1dp(aria-label="Enterprise", flex-lg="20", flex-gt-lg="15")
 		md-toolbar
 			.md-toolbar-tools(layout="row", layout-align="center center")
 				h2 Enterprise
