--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -8,7 +8,7 @@ div(ng-if="!vm.showProject")
 			account-profile(ng-switch-when="profile", username="vm.username", first-name="vm.firstName", last-name="vm.lastName", email="vm.email")
 			account-billing(ng-switch-when="billing", show-page="vm.showPage(page, callingPage)")
 			account-upgrade(ng-switch-when="upgrade", show-page="vm.showPage(page, callingPage)")
-			account-collaborators(ng-switch-when="collaborators", show-page="vm.showPage(page, callingPage)")
+			account-collaborators(ng-switch-when="collaborators", account="vm.account", show-page="vm.showPage(page, callingPage)")
 			account-team(ng-switch-when="team", show-page="vm.showPage(page, callingPage)")
 
 div(ng-if="vm.showProject")
