--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -9,7 +9,7 @@ div(ng-if="!vm.showProject")
 			account-billing(ng-switch-when="billing", show-page="vm.showPage(page, callingPage)")
 			account-upgrade(ng-switch-when="upgrade", show-page="vm.showPage(page, callingPage)")
 			account-collaborators(ng-switch-when="collaborators", account="vm.account", show-page="vm.showPage(page, callingPage)")
-			account-team(ng-switch-when="team", show-page="vm.showPage(page, callingPage)")
+			account-team(ng-switch-when="team", account="vm.account", show-page="vm.showPage(page, callingPage)")
 
 div(ng-if="vm.showProject")
 	project(account="vm.state.account" project="vm.state.project" branch="vm.state.branch" revision="vm.state.revision" state="vm.state")
