--- a/frontend/account/jade/accountCollaborators.jade
+++ b/frontend/account/jade/accountCollaborators.jade
@@ -5,27 +5,34 @@
 				h2 Collaborators
 
 		.userContent
-			md-autocomplete(
-			md-no-cache="vm.noCache"
-			md-selected-item="vm.selectedUser"
-			md-search-text="vm.searchText"
-			md-items="user in vm.querySearch(vm.searchText)"
-			md-item-text="user.name"
-			md-min-length="0"
-			placeholder="Add a collaborator"
-			ng-disabled="vm.addDisabled"
-			)
+			//md-autocomplete(
+				md-no-cache="vm.noCache"
+				md-selected-item="vm.selectedUser"
+				md-search-text="vm.searchText"
+				md-items="user in vm.querySearch(vm.searchText)"
+				md-item-text="user.name"
+				md-min-length="0"
+				placeholder="Add a collaborator"
+				ng-disabled="vm.addDisabled"
+				)
 				md-item-template
 					span(md-highlight-text="vm.searchText", md-highlight-flags="^i") {{user.name}}
 				md-not-found
 					span No user matching "{{vm.searchText}}" was found.
-			md-button.md-raised.md-accent#accountCollaboratorsAdd(ng-click="vm.addCollaborator()", ng-disabled="vm.addDisabled") Add
+			#accountCollaboratorsAdd
+				div
+					md-input-container.md-block(ng-disabled="vm.allLicensesAssigned")
+						label Collaborator username
+						input(type="text", ng-model="vm.newCollaborator")
+				div(layout="row")
+					md-button.md-raised.md-accent(ng-click="vm.addCollaborator()", ng-disabled="vm.addDisabled") Add
+					p {{vm.addMessage}}
 
 			md-divider
 
 			// Assigned
 			md-list
-				md-subheader.md-no-sticky Collaborators
+				md-subheader.md-no-sticky Collaborators ({{vm.collaborators.length}} assigned, {{vm.unassigned.length}} unassigned)
 				md-list-item(ng-repeat="user in vm.collaborators")
 					md-icon.angular-material-icons.collaboratorIcon(aria-label="Person") person
 					.md-list-item-text
