ISSUE #227 - Added company details to Contact page, fixed links and typos in legal pages

--- a/frontend/cookies/jade/cookiesText.jade
+++ b/frontend/cookies/jade/cookiesText.jade
@@ -9,6 +9,7 @@ p.body-text-1
 	strong Information about our use of cookies
 p
 	| Our website and the 3D Repo platform (together the
+	=" "
 	strong Service
 	| ) uses cookies to distinguish you from other users of our Service. This helps us to provide you with a good experience when you browse our Service and also allows us to improve the Service. By continuing to browse the Service, you are agreeing to our use of cookies.
 p
@@ -30,7 +31,7 @@ ul
 		p We do not use Targeting cookies.
 p
 	| You can find more information about the individual cookies we use and the purposes for which we use them in the table below:
-table(border='1', width='532', cellspacing='0', cellpadding='7')
+table(border='1', width='531', cellspacing='0', cellpadding='7')
 	tbody
 		tr(valign='TOP')
 			td(width='118')
@@ -42,7 +43,7 @@ table(border='1', width='532', cellspacing='0', cellpadding='7')
 			td(width='119')
 				p
 					strong Purpose
-			td(width='119')
+			td(width='118')
 				p
 					strong More information
 		tr(valign='TOP')
@@ -51,37 +52,35 @@ table(border='1', width='532', cellspacing='0', cellpadding='7')
 			td(width='119')
 				p connect.sid
 			td(width='119')
-				p [DESCRIPTION OF THE PURPOSE FOR WHICH THE COOKIE IS USED]
 				p
 					| The connect.sid cookie is used to allow you to login to 3drepo.io. It will be removed when you close your browser.
-				p Examples of purposes for which a cookie may be used:
 				p  
-				p This cookie [is essential for our [site] to][enables us to]:
-				ul
-					li
-						p [Estimate our audience size and usage pattern.]
-					li
-						p
-							| [Store information about your preferences, and so allow us to customise our [site] and to provide you with offers that are targeted at your individual interests.]
-					li
-						p [Speed up your searches.]
-					li
-						p [Recognise you when you return to our [site].]
-					li
-						p
-							| [Allow you to use our [site] in a way that makes your browsing experience more convenient, for example, by allowing you to store items in an electronic shopping basket between visits. If you register with us or complete our online forms, we will use cookies to remember your details during your current visit, and any future visits provided the cookie was not deleted in the interim.]
-					li
-						p [OTHER PURPOSES]
+				p  
+			td(width='118')
+				p  
+		tr(valign='TOP')
+			td(width='118')
+				p Google Analytics
+				p  
+				p  
+				p  
 			td(width='119')
-				p [WHERE APPROPRIATE, INSERT LINK TO EXTERNAL INFORMATION]
+				p utma
+				p utmb
+				p utmc
+				p utmz
+				p  
+			td(width='119')
+				p
+					| These cookies are used to collect information about how visitors use our site. We use the information to compile reports and to help us improve the site.
+				p
+					| The cookies collect information in an anonymous form, including the number of visitors to the site, where visitors have come to the site from and the pages they visited.
+			td(width='118')
+				p
+					a(href='https://support.google.com/analytics/answer/6004245') Read Google's overview of privacy and safeguarding data
 p
 	| Please note that third parties (including, for example, providers of external services like web traffic analysis services) may also use cookies, over which we have no control. These cookies are likely to be analytical/performance cookies or targeting cookies.
 p
 	| You block cookies by activating the setting on your browser that allows you to refuse the setting of all or some cookies. However, if you use your browser settings to block all cookies (including essential cookies) you may not be able to access all or parts of the Service.
-p
-	| Except for essential cookies, all cookies will expire after [ at the end of session (i
-	span(style='color: #000000;')
-		span(style='font-size: small;')
-			span(lang='en-GB') .e. Users close the browser)_
-	| ].
+p  
 p  
