--- a/frontend/privacy/jade/privacyText.jade
+++ b/frontend/privacy/jade/privacyText.jade
@@ -14,12 +14,14 @@ p
 	| ) that you provide to us, or that we collect from you or third parties, will be processed by us. Please read the following carefully to understand our views and practices regarding the Data and how we will treat it.
 p
 	| By accessing and using 3D Repo and associated services (the
+	=" "
 	strong Service
 	| ), you are accepting and consenting to the practices described in this policy.
 p
 	| For the purpose of the Data Protection Act 1998 (the
+	=" "
 	strong Act
-	| ), the data controller is 3D Repo Limited of c/o EIT Digital, Centre House Block C, 56 Wood Lane, London W12 7SB, UK.
+	| ), the data controller is 3D Repo Limited of c/o EIT Digital, Centre House Block C, 56 Wood Lane, London W12 7SB, UK .
 p
 	| Capitalised words used in this policy have the same meaning as given in the 3D Repo Platform Terms of Use or other relevant Terms of Use.
 p.body-text-1
@@ -41,30 +43,22 @@ ul
 		p
 			| by corresponding with us by phone, e-mail or otherwise including when you use our support services.
 		p
-			| The Data you give us may include your name, work e-mail address, username and password, as well as Submitted Content. Any payment card details you give us in order to pay subscription fees will not be stored by 3D Repo and will be encrypted and stored securely by our payment processing provider.
-			span(style='font-size: xx-small;')
-				// According to Linda we may need to store also billing address (although we might be able to query that from PayPal without actually storing). After their VAT consultant visits 3D Repo, I’ll be able to let you know what else we need to store.
+			| The Data you give us may include your name, e-mail address, billing address, username and password, as well as Submitted Content. Any payment card details you give us in order to pay subscription fees will not be stored by 3D Repo and will be encrypted and stored securely by our payment processing provider.
 		p
 			| If you give us information about anyone else, you must ensure that you have the relevant authorisation to do so and for 3D Repo to use that information as set out in this Data and Privacy Policy.
 		p
-			| You must think carefully before uploading personal or other sensitive information to the Service and we will not be liable to you in any way for any consequences of doing so.
-			span(style='font-size: xx-small;')
-				// Is this enforceable?
+			| Except for the information required by us from you in order to access the Service, you must think carefully before uploading personal or other sensitive information to the Service and we will not be liable to you in any way for any consequences of doing so.
 ul
 	li
 		p
 			strong Data we collect about you.
 			|  With regard to your use of the Service we may automatically collect (and you consent to us accessing and collecting) the following Data:
-			strong
-				| [Please check and ensure that it reflects the data collected – will you collect e.g. location information?]
-			span(style='font-size: xx-small;')
-				// We also need to add collection of: Camera feed for purposes of uploading photographs (eg for snagging and commissioning on construction projects) as well as for reading QR codes. Furthermore, people will be able to upload any random images as attachments so not sure if that falls under here or T&Cs (same as 3D models).
 ul
 	li
 		p
-			| [technical information, including the type of device you use (
+			| technical information, including the type of device you use (
 			strong Device
-			| ), a unique device identifier (for example, your Device's IMEI number, the MAC address of the Device's wireless network interface, or the mobile phone number used by the Device), network information, your operating system, screen type and resolution, the type of web browser you use, the time zone setting; and]
+			| ), a unique device identifier (for example, your Device's IMEI number, the MAC address of the Device's wireless network interface, or the mobile phone number used by the Device), network information, your mobile operating system, screen type and resolution, the type of web browser you use, the time zone setting;
 	li
 		p
 			| details of your use of the Service including, but not limited to, traffic data, location data, statistics of content uploaded, downloaded and viewed.
@@ -73,18 +67,20 @@ ul
 			| technical information, including the Internet protocol (IP) address used to connect your computer to the Internet, your login information, browser type and version, time zone setting, browser plug-in types and versions, operating system and platform;
 	li
 		p
-			| information about your use of the Service, including the full Uniform Resource Locators (URL) clickstream to, through and from our Service (including date and time); elements you viewed or words you searched for; page response times; download errors; length of visits; interaction information (such as scrolling, clicks, and mouse-overs); and any phone number or email address used to contact our customer.
+			| information about your use of the Service, including the full Uniform Resource Locators (URL) clickstream to, through and from our Service (including date and time); elements you viewed or words you searched for; page response times; download errors; length of visits; interaction information (such as scrolling, clicks, and mouse-overs); and any phone number or email address used to contact us.
 	li
 		p
 			| analytics such as server monitoring tools to monitor the status of our APIs and the type and volume of queries being made to them.
 	li
 		p
 			strong Cookies.
+			=" "
 			| Our website uses cookies to distinguish you from other users of our Service. This helps us to provide you with a better experience when you use the Service. For detailed information on the cookies we use and the purposes for which we use them, please see our Cookies policy [LINK].
 	li
 		p
-			strong [Location Information.
-			| We may make use of location data sent from Devices. You can turn off this functionality at any time by turning off the location services settings for the mobile application on the Device. If you use these location services, you consent to us and our affiliates' and licensees' transmission, collection, maintenance, processing and use of your location data and queries to provide and improve location-based products and services. We may also use GPS technology or other technology to determine your current location. Some of our location-enabled services require your personal data for the feature to work.]
+			strong Location Information.
+			=" "
+			| We may make use of location data sent from Devices. You can turn off this functionality at any time by turning off the location services settings for the mobile application on the Device. If you use these location services, you consent to us and our affiliates' and licensees' transmission, collection, maintenance, processing and use of your location data and queries to provide and improve location-based products and services. We may also use other technology (e.g. your time zone and IP address) to determine information regarding your current location. Some of our location-enabled services require your personal data for the feature to work.
 ul
 	li
 		p
@@ -103,7 +99,7 @@ ul
 	li
 		p
 			strong Data you give to us.
-			|  We will use only use this information:
+			|  We will only use this information:
 ul
 	li
 		p
@@ -115,19 +111,16 @@ ul
 			| to notify you about changes to the Service and about other services we offer that are similar or related to the Service.
 	li
 		p
-			| [for the purposes of general analysis and research and in order to produce industry commentary and insights, provided that we may only disclose it outside 3D Repo in anonymised, aggregated or otherwise de-identified form]
+			| for the purposes of general analysis and research and in order to produce industry commentary and insights, provided that we may only disclose it outside 3D Repo in anonymised, aggregated or otherwise de-identified form.
 	li
 		p
-			| In the case of Submitted Content that is designated by you as being publicly available, for 3D Repo’s marketing and publicity purposes.
-		p
-			strong
-				| [Note: I’m assuming you aren’t using third party advertising as part of the Service?]
-			span(style='font-size: xx-small;')
-				// Well... upon registration, all users (incl collaborators) will be given a free toy project which is courtesy of Bond Bryan Architects Ltd. I guess you could count that as advertising although we’re not paid for it. However, going forwards, as the platform gains traction, we might want to include advertising space.
+			| for 3D Repo’s marketing and publicity purposes, in relation to information that is Submitted Content and that is designated by you as being publicly available.
+		p  
 ul
 	li
 		p
 			strong Data we collect about you.
+			=" "
 			| We will use this information:
 ul
 	li
@@ -154,10 +147,7 @@ p.body-text-1
 p
 	| In order to provide our services to you, we may share Data with (i) any member of our group (which means our subsidiaries, our ultimate holding company and its subsidiaries from time to time, as defined in section 1159 of the UK Companies Act 2006) and (ii) business partners, suppliers and sub-contractors.
 p
-	| [We may also share Data (excluding personal data) indirectly as part of research or commentary released by us, provided that such Data is in anonymised, aggregated or other de-identified form.]
-	strong [Note: is this the case?]
-	span(style='font-size: xx-small;')
-		// Yes, we are actively publishing research papers each year.
+	| We may also share Data (excluding personal data) indirectly as part of research or commentary released by us, provided that such Data is in anonymised, aggregated or other de-identified form.
 p We may disclose your personal information to third parties:
 ul
 	li
@@ -175,23 +165,17 @@ ul
 p.body-text-1(align='LEFT')
 	strong WHERE WE STORE DATA
 p
-	| The Data that we collect from you may be transferred to, and stored at, a destination outside the European Economic Area ("
+	| The Data that we collect from you will be stored within the European Economic Area ("
 	strong EEA
-	| ") including for the purposes of our hosting and data centre provider, [Amazon Web Services]
-	strong [Note: do you use AWS and where is the data stored?]
-	| . It may also be processed by staff operating outside the EEA who work for us or for one of our suppliers. Such staff maybe engaged in, among other things, the provision of support services. By submitting your personal data, you agree to this transfer, storing or processing. We will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this data and privacy policy.
-	span(style='font-size: xx-small;')
-		// At the moment we use Rackspace and host exclusively in their datacentres in the UK. Even if we used AWS, we would go with their Dublin-based datacentre. The difficulty with these things is that any public construction in the UK has to host data on British soil, so I would avoid mentioning destinations outside EEA if not outside UK altogether.
+	| "), including for the purposes of our hosting and data centre provider. We will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this data and privacy policy.
 p
-	| All Data you provide to us is stored on secure servers. Any payment transactions will be encrypted using SSL technology by our payment processing partner. Where we have given you (or where you have chosen) a password or an API key which enables you to access the Service, you are responsible for keeping this password confidential. You must not share a password with anyone.
+	| All Data you provide to us is stored on secure servers and will be encrypted using SSL technology. Any payment transactions will be encrypted using SSL technology by our payment processing partner. Where we have given you (or where you have chosen) a password which enables you to access the Service, you are responsible for keeping this password confidential. You must not share a password with anyone.
 p
 	| Unfortunately, the transmission of information via the internet is not completely secure. Although we will do our best to protect Data, we cannot guarantee the security of your Data transmitted to us; any transmission is at your own risk. Once we have received your Data, we will use strict procedures and security features to try to prevent unauthorised access.
-	span(style='font-size: xx-small;')
-		// Note that all transmission to and from 3D Repo Service is SSL encrypted by default. We take security very seriously.
 p.body-text-1
 	strong YOUR RIGHTS
 p
-	| You have the right to ask us not to process your personal data for marketing purposes. We will usually inform you (before collecting your Data) if we intend to use your Data for such purposes or if we intend to disclose your information to any third party for such purposes. You can exercise the right at any time by contacting us at [support@3drepo.org].
+	| You have the right to ask us not to process your personal data for marketing purposes. We will usually inform you (before collecting your Data) if we intend to use your Data for such purposes or if we intend to disclose your information to any third party for such purposes. You can exercise the right at any time by contacting us at support@3drepo.org.
 p
 	| 3D Repo may, from time to time, contain links to and from other websites. If you follow a link to any of these websites, please note that these websites have their own privacy policies and that we do not accept any responsibility or liability for these policies. Please check these policies before you submit any personal data to these websites.
 p.body-text-1
@@ -205,5 +189,5 @@ p.body-text-1
 p.body-text-1
 	strong CONTACT
 p
-	| Questions, comments and requests regarding this privacy policy are welcomed and should be addressed to [support@3drepo.org].
+	| Questions, comments and requests regarding this privacy policy are welcomed and should be addressed to support@3drepo.org.
 p  
