--- a/frontend/contact/jade/contact.jade
+++ b/frontend/contact/jade/contact.jade
@@ -1,28 +1,56 @@
 .homeUserContent(layout="row", layout-align="center")
-	md-content.md-whiteframe-1dp(aria-label="Contact Us", flex="20")
+	md-content.md-whiteframe-1dp(aria-label="Contact Us", flex="40")
 		md-toolbar
 			.md-toolbar-tools
 				h2 Contact Us
-		.userContent(layout="column")
-			div(ng-if="!vm.sent")
-				md-input-container.md-block
-					label Contact information
-					textarea(ng-model="vm.contact.information")
-				md-input-container.md-block
-					label Name
-					input(type="text", ng-model="vm.contact.name")
-				md-input-container.md-block
-					label Email
-					input(type="email", ng-model="vm.contact.email")
-				// Extra hidden input to prevent input autofill
-				input(type="email", ng-show="false")
+		.userContent(layout="row")
+			div(layout="column", flex)
+				div(ng-if="!vm.sent")
+					md-input-container.md-block
+						label Contact information
+						textarea(ng-model="vm.contact.information")
+					md-input-container.md-block
+						label Name
+						input(type="text", ng-model="vm.contact.name")
+					md-input-container.md-block
+						label Email
+						input(type="email", ng-model="vm.contact.email")
+					// Extra hidden input to prevent input autofill
+					input(type="email", ng-show="false")
 
-				div(layout="row", layout-align="start center")
-					md-button.md-accent.md-raised(ng-click="vm.send()", ng-disabled="vm.sendButtonDisabled") Send
-					div(ng-if="vm.sending", layout="row", layout-align="start center")
-						p Please wait...
-						md-progress-circular(md-mode="indeterminate", md-diameter="20")
+					div(layout="row", layout-align="start center")
+						md-button.md-accent.md-raised#contactSendButton(ng-click="vm.send()", ng-disabled="vm.sendButtonDisabled") Send
+						div(ng-if="vm.sending", layout="row", layout-align="start center")
+							p Please wait...
+							md-progress-circular(md-mode="indeterminate", md-diameter="20")
 
-			div(ng-if="vm.sent")
-				h3 Thank you {{vm.contact.name}}.
-				h3 We will get back to you shortly.
+				div(ng-if="vm.sent")
+					h3 Thank you {{vm.contact.name}}.
+					h3 We will get back to you shortly.
+
+			div(flex="5", layout="row", layout-align="center")
+				#contactDivider(flex="none")
+
+			#contact3DRepo(layout="column", flex)
+				p.md-title 3D Repo Ltd
+				div(layout="column", flex)
+					div(layout="row", flex="none")
+						p.contact3DRepoLabel(flex="40") Address
+						div(layout="column")
+							p c/o EIT Digital
+							p Centre House Block C
+							p 56 Wood Lane
+							p London W12 7SB
+							p United Kingdom
+					div(layout="row", layout-align="start center", flex="none")
+						p.contact3DRepoLabel(flex="40") Email
+						md-button.md-primary#contactEmailButton(href="mailto:support@3drepo.org") support@3drepo.org
+					div(layout="row", flex="none")
+						p.contact3DRepoLabel(flex="40") Telephone
+						p 123456789
+					div(layout="row", flex="none")
+						p.contact3DRepoLabel(flex="40") Company Number
+						p 09014101
+					div(layout="row", flex="none")
+						p.contact3DRepoLabel(flex="40") VAT Registration
+						p GB 206 9090 15
