--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -6,7 +6,7 @@ div(ng-if="!vm.showProject")
 		#accountItem(ng-switch="vm.itemToShow")
 			account-projects(ng-switch-when="repos", account="vm.account", accounts="vm.accounts", show-page="vm.showPage(page, callingPage)")
 			account-profile(ng-switch-when="profile", username="vm.username", first-name="vm.firstName", last-name="vm.lastName", email="vm.email")
-			account-billing(ng-switch-when="billing", show-page="vm.showPage(page, callingPage)")
+			account-billing(ng-switch-when="billing", account="vm.account", show-page="vm.showPage(page, callingPage)")
 			account-upgrade(ng-switch-when="upgrade", show-page="vm.showPage(page, callingPage)")
 			account-collaborators(ng-switch-when="collaborators", account="vm.account", show-page="vm.showPage(page, callingPage)")
 			account-team(ng-switch-when="team", account="vm.account", show-page="vm.showPage(page, callingPage)")
