--- a/frontend/home/jade/home.jade
+++ b/frontend/home/jade/home.jade
@@ -5,13 +5,13 @@ img#homeBackground(src="/public/images/viewer_background.jpg")
 #homeLogo
 	img(src="/public/images/3drepo-logo-white.png")
 
-div(ng-if="!vm.state.changing")
-	div(ng-if="!vm.state.loggedIn")
-		div(ng-if="vm.getLoggedOutUrl()" ng-include="vm.getLoggedOutUrl()")
-		#homeLoggedOut(ng-if="!vm.getLoggedOutUrl()")
+div(ng-show="!vm.state.changing")
+	div(ng-show="!vm.state.loggedIn")
+		div(ng-show="vm.getLoggedOutUrl()" ng-include="vm.getLoggedOutUrl()")
+		#homeLoggedOut(ng-show="!vm.getLoggedOutUrl()")
 
-	div(ng-if="vm.state.loggedIn")
-		div(ng-if="vm.getLoggedInUrl()" ng-include="vm.getLoggedInUrl()")
-		div(ng-if="!vm.getLoggedInUrl()")
+	div(ng-show="vm.state.loggedIn")
+		div(ng-show="vm.getLoggedInUrl()" ng-include="vm.getLoggedInUrl()")
+		div(ng-show="!vm.getLoggedInUrl()")
 			#homeLoggedIn
 			account-dir(account='vm.state.account', state='vm.state', ng-if="vm.goToAccount", show="vm.showAccount")
