--- a/frontend/termsAndConditions/jade/termsAndConditionsText.jade
+++ b/frontend/termsAndConditions/jade/termsAndConditionsText.jade
@@ -155,7 +155,7 @@ ol
 					| ) are as notified to you (including as set out on the 3drepo.io website) from time to time. Access to certain functionality may be granted by us fee of charge in our discretion to Users who have not taken a Subscription.
 			li
 				p.level-2-number
-					| Unless indicated otherwise by us, the Charges are payable monthly in advance via our chosen payment processor using the payment card details provided by the User. 3D Repo does not directly store any payment card details.
+					| Unless indicated otherwise by us, the Charges are payable monthly in advance via our chosen payment processor using the payment card details provided by the User. 3D Repo does not directly store any payment card details. We do not store credit card details.
 			li
 				p.level-2-number
 					| We reserve the right to suspend the provision of the Service in the event that Charges are not paid when due.
