--- a/frontend/home/jade/home.jade
+++ b/frontend/home/jade/home.jade
@@ -9,4 +9,4 @@ img#homeBackground(src="/public/images/viewer_background.jpg")
 
 div(ng-if="!vm.state.changing")
 	div(ng-if="!vm.goToUserPage")
-		account-dir(account='vm.state.account', state='vm.state', ng-if="vm.state.loggedIn")
+		account-dir(account='vm.state.account', state='vm.state', query='vm.query', ng-if="vm.state.loggedIn")
