--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -48,7 +48,7 @@ html(lang="en" ng-app="3drepo")
 
 		// Plugin JS and Angular files
 		//script(type="text/javascript", src='/public/dist/plugins.min.js')
-		script(type="text/javascript", src='/public/dist/three_d_repo.min.js')
+		script(type="text/javascript", src='/public/dist/three_d_repo.js')
 
 		// Plugin JS Files
 		//each val in pluginJS
