--- a/frontend/account/jade/accountBilling.jade
+++ b/frontend/account/jade/accountBilling.jade
@@ -23,30 +23,22 @@
 					label Payment (£ / month)
 					input(type="text", ng-model="vm.priceLicenses", ng-disabled="true")
 
-			.accountBillingSave
-				div(layout="row", layout-align="start")
-					md-button.md-raised.md-accent(ng-disabled="vm.saveSubscriptionDisabled", ng-click="vm.changeSubscription()") Save
-					img(src="/public/images/pp-logo-100px.png")
-				md-divider
-
-			// Billing info
-			h1.md-title Billing information
 			div(layout="row")
 				md-input-container(flex)
 					label Postal code
-					input(type="text", ng-model="vm.newBillingInfo.postalCode")
+					input(type="text", ng-model="vm.newBillingInfo.postalCode", ng-disabled="vm.billingDetailsDisabled")
 				md-input-container(flex)
 					label Country
-					md-select(ng-model="vm.newBillingInfo.country")
+					md-select(ng-model="vm.newBillingInfo.country", ng-disabled="vm.billingDetailsDisabled")
 						md-option(ng-repeat="(key, value) in vm.countries", value="{{key}}") {{key}}
 				md-input-container(flex)
-					label VAT number
-					input(type="text", ng-model="vm.newBillingInfo.vatNumber")
+					label VAT number (optional)
+					input(type="text", ng-model="vm.newBillingInfo.vatNumber", ng-disabled="vm.billingDetailsDisabled")
 
 			.accountBillingSave
 				div(layout="row", layout-align="start")
-					md-button.md-raised.md-accent(ng-disabled="vm.saveBillingInfoDisabled") Save
-					img(src="/public/images/pp-logo-100px.png")
+					md-button.md-raised.md-accent(ng-disabled="vm.saveDisabled")
+						img(src="/public/images/pp-logo-100px.png")
 				md-divider
 
 			// Billing History
